Add backend support for suggested orders v1
